<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.tour.MainActivity">


        <Button
            android:id="@+id/summer_destination1"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/hawaii"
            android:gravity="center"
            android:text="@string/Summer_Destination_1"
            android:textColor="#ffffff"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/summer_destination2"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/dubai"
            android:gravity="center"
            android:text="@string/Summer_Destination_2"
            android:textColor="#000"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/summer_destination3"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/borabora"
            android:gravity="center"
            android:text="@string/Summer_Destination_3"
            android:textColor="#ffffff"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/summer_destination4"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/ca"
            android:gravity="center"
            android:text="@string/Summer_Destination_4"
            android:textColor="#000000"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/summer_destination5"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/amsterdam"
            android:gravity="center"
            android:text="@string/Summer_Destination_5"
            android:textColor="#ffffff"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/summer_destination6"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/oceancity"
            android:gravity="center"
            android:text="@string/Summer_Destination_6"
            android:textColor="#000"
            android:textSize="44sp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>
