<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myapplication.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/summer"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_1"
        android:gravity="center"
        android:text="@string/category_Season1"
        android:textSize="44sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/spring"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_2"
        android:gravity="center"
        android:text="@string/category_Season4"
        android:textSize="44sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/rainy"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_3"
        android:gravity="center"
        android:text="@string/category_Season3"
        android:textSize="44sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/winter"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_4"
        android:gravity="center"
        android:text="@string/category_Season"
        android:textSize="44sp"
        android:textStyle="bold" />

</LinearLayout>
